--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Personal repo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -17,8 +21,9 @@
   "bugs": {
     "url": "https://github.com/elmergonz/elmergonz.github.io/issues"
   },
-  "homepage": "https://github.com/elmergonz/elmergonz.github.io#readme",
+  "homepage": "https://github.com/elmergonz/elmergonz.github.io",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^6.0.11"
   },
   "dependencies": {
